# media_system_Demo.io

./: CMakeLists.txt  Makefile  README_CODE_EXPLANATION.md  backup_demo.sh  backup_demo_simple.sh  lv_conf.h  my_font.h  my_font_decl.h  sync_make.sh
ffmpeg-7.1.1/: config.h  config_components.h
ffmpeg-7.1.1/doc/: config.texi
ffmpeg-7.1.1/ffbuild/: config.fate  config.mak  config.sh
ffmpeg-7.1.1/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  a64multienc.d  aac_ac3_parser.d  aac_parser.d  aaccoder.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_common.d  aacps_fixed.d  aacps_float.d  aacpsdsp_fixed.d  aacpsy.d  aacsbr.d  aacsbr_fixed.d  aactab.d  aasc.d  ac3_parser.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  acelp_filters.d  acelp_pitch_delay.d  acelp_vectors.d  adpcm.d  adpcmenc.d  adts_header.d  adts_parser.d  adx.d  adx_parser.d  adxdec.d  (+721 more)
ffmpeg-7.1.1/libavcodec/aac/: aacdec.d  aacdec_ac.d  aacdec_fixed.d  aacdec_float.d  aacdec_lpd.d  aacdec_tab.d  aacdec_usac.d
ffmpeg-7.1.1/libavcodec/arm/: aacpsdsp_init_arm.d  ac3dsp_init_arm.d  audiodsp_init_arm.d  blockdsp_init_arm.d  blockdsp_init_neon.d  flacdsp_init_arm.d  fmtconvert_init_arm.d  g722dsp_init_arm.d  h264chroma_init_arm.d  h264cmc_neon.d  h264dsp_init_arm.d  h264pred_init_arm.d  h264qpel_init_arm.d  hevcdsp_init_arm.d  hevcdsp_init_neon.d  hpeldsp_init_arm.d  idctdsp_init_arm.d  idctdsp_init_armv5te.d  idctdsp_init_armv6.d  idctdsp_init_neon.d  lossless_audiodsp_init_arm.d  me_cmp_init_arm.d  mlpdsp_init_arm.d  mpegaudiodsp_init_arm.d  mpegvideo_arm.d  mpegvideo_armv5te.d  mpegvideoencdsp_init_arm.d  pixblockdsp_init_arm.d  pixblockdsp_neon.d  rv34dsp_init_arm.d  rv40dsp_init_arm.d  sbcdsp_init_arm.d  sbrdsp_init_arm.d  synth_filter_init_arm.d  vc1dsp_init_arm.d  vc1dsp_init_neon.d  videodsp_init_arm.d  videodsp_init_armv5te.d  vorbisdsp_init_arm.d  vp3dsp_init_arm.d  (+5 more)
ffmpeg-7.1.1/libavcodec/bsf/: aac_adtstoasc.d  av1_frame_merge.d  av1_frame_split.d  av1_metadata.d  chomp.d  dca_core.d  dovi_rpu.d  dts2pts.d  dump_extradata.d  dv_error_marker.d  eac3_core.d  evc_frame_merge.d  extract_extradata.d  filter_units.d  h264_metadata.d  h264_mp4toannexb.d  h264_redundant_pps.d  h265_metadata.d  h266_metadata.d  hapqa_extract.d  hevc_mp4toannexb.d  imx_dump_header.d  media100_to_mjpegb.d  mjpeg2jpeg.d  mjpega_dump_header.d  movsub.d  mpeg2_metadata.d  mpeg4_unpack_bframes.d  noise.d  null.d  opus_metadata.d  pcm_rechunk.d  pgs_frame_merge.d  prores_metadata.d  remove_extradata.d  setts.d  showinfo.d  trace_headers.d  truehd_core.d  vp9_metadata.d  (+4 more)
ffmpeg-7.1.1/libavcodec/hevc/: cabac.d  dsp.d  filter.d  hevcdec.d  mvs.d  parse.d  parser.d  pred.d  ps.d  refs.d  sei.d
ffmpeg-7.1.1/libavcodec/opus/: celt.d  enc.d  enc_psy.d  parse.d  parser.d  pvq.d  rc.d
ffmpeg-7.1.1/libavcodec/vvc/: cabac.d  ctu.d  data.d  dec.d  dsp.d  filter.d  inter.d  intra.d  intra_utils.d  itx_1d.d  mvs.d  ps.d  refs.d  thread.d
ffmpeg-7.1.1/libavformat/: 3dostr.d  4xm.d  a64.d  aacdec.d  aadec.d  aaxdec.d  ac3dec.d  ac4dec.d  ac4enc.d  acedec.d  acm.d  act.d  adp.d  ads.d  adtsenc.d  adxdec.d  aeadec.d  aeaenc.d  afc.d  aiff.d  aiffdec.d  aiffenc.d  aixdec.d  allformats.d  alp.d  amr.d  amvenc.d  anm.d  apac.d  apc.d  ape.d  apetag.d  apm.d  apngdec.d  apngenc.d  aptxdec.d  aqtitledec.d  argo_asf.d  argo_brp.d  argo_cvg.d  (+430 more)
ffmpeg-7.1.1/libavutil/: adler32.d  aes.d  aes_ctr.d  ambient_viewing_environment.d  audio_fifo.d  base64.d  blowfish.d  buffer.d  camellia.d  cast5.d  channel_layout.d  cpu.d  crc.d  des.d  detection_bbox.d  dovi_meta.d  downmix_info.d  encryption_info.d  eval.d  executor.d  fifo.d  file.d  file_open.d  film_grain_params.d  fixed_dsp.d  frame.d  hash.d  hdr_dynamic_metadata.d  hdr_dynamic_vivid_metadata.d  hwcontext.d  iamf.d  imgutils.d  integer.d  intmath.d  lfg.d  libavutil.pc  libavutil.so.59  lls.d  log.d  lzo.d  (+31 more)
ffmpeg-7.1.1/libswscale/: alphablend.d  gamma.d  hscale.d  hscale_fast_bilinear.d  input.d  libswscale.pc  options.d  output.d  rgb2rgb.d  slice.d  swscale.d  swscale_unscaled.d  utils.d  version.d  vscale.d  yuv2rgb.d
inc/: data.h  dcim.h  kugou_music.h  main.h  main_screen.h  screen.h  start_video.h  video.h
lib/: liblvgl.so.1
src/: data.c  dcim.c  kugou_music.c  main.c  main_screen.c  screen.c  start_video.c  video.c
(+16 files in other folders)
